<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    android:id="@+id/horizontalScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffad6a"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/shapeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="200dp"
            android:text="@string/hello"
            android:textColor="#4d4d4d"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="200dp"
            android:text="@string/your_first_use_right"
            android:textColor="#4d4d4d"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="200dp"
            android:text="@string/welcome_to_moneykeeper"
            android:textColor="#4d4d4d"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="50dp"
            android:text="@string/next"
            android:onClick="openRegisterInfo"
            android:textColor="#4d4d4d"
            android:textSize="30sp" />


    </LinearLayout>
</HorizontalScrollView>