<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RegisterView"
    android:gravity="center_horizontal"
    android:background="#ffad6a">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="273dp"
            android:layout_height="384dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@mipmap/colorf1781b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="96dp"
            android:layout_marginTop="28dp"
            android:text="@string/register"
            android:textColor="#4d4d4d"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="12dp"
            android:hint="@string/nickname"
            android:textColor="#4d4d4d"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:hint="@string/balance"
            android:textColor="#4d4d4d"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="120dp"
            android:onClick="dialogAlert"
            android:text="@string/next"
            android:textColor="#4d4d4d"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

</android.support.constraint.ConstraintLayout>