<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RegisterView"
    android:gravity="center_horizontal"
    android:background="#ffad6a">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="634dp"
        android:layout_height="75dp"
        android:layout_marginTop="448dp"
        android:background="@mipmap/colorf1781b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="165dp"
        android:layout_height="245dp"
        android:layout_marginBottom="292dp"
        android:layout_marginEnd="84dp"
        android:background="@mipmap/colorf1781b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="232dp"
        android:layout_marginTop="24dp"
        android:text="@string/new_pin_code"
        android:textColor="#4d4d4d"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_marginStart="176dp"
        android:onClick="onClick"
        android:text="@string/next"
        android:textColor="#4d4d4d"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginTop="268dp"
        android:ems="10"
        android:hint="@string/enter_here"
        android:inputType="number"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>